--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="img/logo raa-1.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 </head>
 <body>
 
@@ -28,6 +30,12 @@
         <li><a href="#">مهرجان ربيع الشعر</a></li>
       </ul>
     </nav>
+  
+  <div class="nav-social-icons">
+    <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="mailto:raaforum@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+  </div>
   </div>
 </header>
 
@@ -35,7 +43,7 @@
 
   <!-- Section: من نحن -->
 
-  <section class="about container">
+  <section class="literary-section">
   <h2>من نحن</h2>
   <p>
     تأسس منتدى رع للثقافة والإبداع بآسفي سنة 2022، إيمانًا راسخًا بأن الأدب والثقافة يشكلان جسرًا متينًا للتواصل بين الشعوب، وتعزيزًا لقيم التفاهم وقبول الآخر. ومنذ انطلاقه، ظل المنتدى وفيًّا لجوهر رسالته؛ نشر الأعمال الجليلة ودعم الإبداع في مختلف تجلياته.
@@ -62,7 +70,7 @@
 
 
   <!-- Section: كلمة الرئيس -->
-  <section class="president-word ">
+  <section class="literary-section">
     <h2>كلمة الرئيس</h2>
     <div class="president-text">
       <p>
@@ -87,7 +95,7 @@
   <section class="honorary container">
     <h2>الرئيس الشرفي</h2>
     <div class="honorary-content">
-      <img src="img/الرئيس محمد زين.jpg" alt="صورة الرئيس الشرفي" class="honorary-img" />
+      <img src="img/mohammed_zi.png" alt="صورة الرئيس الشرفي" class="honorary-img" />
       <div class="bio">
         <p>
           سيرته، وصور جائزته العالمية "جائزة الشيخ زايد للكتاب في دورتها التاسعة عشرة في فرع “الفنون والدراسات النقدية”، عن كتابه: “الطعام والكلام: حفريات بلاغية ثقافية في التراث العربي”، الصادر عن دار افريقيا الشرق، الدار البيضاء، المغرب، سنة 2023م.
@@ -97,28 +105,189 @@
   </section>
 
   <!-- Section: اللجان -->
-  <section class="committees container">
-    <article>
-      <h2>المكتب التنفيذي</h2>
-      <p>معلومات عن المكتب التنفيذي للمنتدى.</p>
-    </article>
-    <article>
-      <h2>اللجنة العلمية والاستشارية</h2>
-      <p>أدوار أعضاء اللجنة العلمية، ومساهماتهم في تخطيط البرامج والمشاريع.</p>
-    </article>
-    <article>
-      <h2>مهرجان ربيع الشعر</h2>
-      <p>تفاصيل عن لجنة تنظيم مهرجان آسفي الدولي ربيع الشعر، وأهدافه الثقافية.</p>
-    </article>
-  </section>
+ 
+    <section class="team-section container">
+  <h2>المكتب التنفيذي</h2>
+  <div class="cards-grid">
+    <div class="card">
+      <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
+      <h3>الرئيس</h3>
+      <p>ذ. محمد زين</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/ho" alt="خديجة العباسي" class="profile-img" />
+      <h3>النائبة</h3>
+      <p>لال خديجة العباسي</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/youssef_abidat.png" alt="يوسف عابدات" class="profile-img" />
+      <h3>أمين المال</h3>
+      <p>يوسف عابدات</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/نائب_أمين_المال_عبد_الغني_النغايوي-removebg-preview.png" alt="عبد الغني النغايوي" class="profile-img" />
+      <h3>نائب أمين المال</h3>
+      <p>عبد الغني النغايوي</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+  <div class="card">
+        <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
+        <h3>الكاتب العام</h3>
+        <p>عزيز عدادي</p>
+        <a href="#">↗ السيرة الذاتية</a>
+        </div>
+    <div class="card">
+      <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
+      <h3>نائبة الكاتب العام</h3>
+      <p>هدى الخصالي</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
+      <h3>مستشارة</h3>
+      <p>مليكة ضريبين</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+  </div>
+  
+</section>
+
+
+    <section class="team-section container">
+  <h2>اللجنة العلمية والاستشارية</h2>
+  <div class="cards-grid">
+    <div class="card">
+      <img src="img/الدكتور أحمد قادم.jpg" alt="أحمد قادم" class="profile-img" />
+      <h3>الدكتور</h3>
+      <p>أحمد قادم</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/saidelaouadi.png" alt="سعيد العوادي" class="profile-img" />
+      <h3>الدكتور</h3>
+      <p>سعيد العوادي</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/abdrza9...png" alt="عبد الرزاق المصباحي" class="profile-img" />
+      <h3>الدكتور</h3>
+      <p>عبد الرزاق المصباحي</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+    <div class="card">
+      <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
+      <h3>الدكتور</h3>
+      <p>محمد المودن</p>
+      <a href="#">↗ السيرة الذاتية</a>
+    </div>
+  </div>
+</section>
+
+<!-- Section: مهرجان ربيع الشعر -->
+
+<section class="team-section container">
+  <h2>لجنة قيادة مشروع مهرجان آسفي الدولي ربيع الشعر</h2>
+  <div class="cards-grid-1">
+    <div class="card-1">
+      <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
+      <p>ذ. محمد زين</p>
+    </div>
+    <div class="card-1">
+      <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
+      <p>ذ. عزيز عدادي</p>
+    </div>
+    <div class="card-1">
+      <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
+      <p>ذة. مليكة ضريبين</p>
+    </div>
+    <div class="card-1">
+      <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
+      <p>ذة. هدى الخصالي</p>
+    </div>
+    <div class="card-1">
+      <img src="img/ذة. زكية المرموق" alt="زكية المرموق" class="profile-img" />
+      <p>ذة. زكية المرموق</p>
+    </div>
+    <div class="card-1">
+      <img src="img/" alt="محمد العربي غجو" class="profile-img" />
+      <p>ذ. محمد العربي غجو</p>
+    </div>
+    <div class="card-1">
+      <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
+      <p>د. محمد المودن</p>
+    </div>
+    <div class="card-1">
+      <img src="img/" alt="عبد المجيد هضمي" class="profile-img" />
+      <p>ذ. عبد المجيد هضمي</p>
+    </div>
+    <div class="card-1">
+      <img src="img/m" alt="محمد منير" class="profile-img" />
+      <p>ذ. محمد منير</p>
+    </div>
+    <div class="card-1">
+      <img src="img/abdlhadirawdi.png" alt="عبد الهادي روضي" class="profile-img" />
+      <p>د. عبد الهادي روضي</p>
+    </div>
+    <div class="card-1">
+      <img src="img/dr_rachid.png" alt="رشيد الخديري" class="profile-img" />
+      <p>د. رشيد الخديري</p>
+    </div>
+    <div class="card-1">
+      <img src="img/الباحث_أسامة_لحفيظ.png" alt="أسامة حفيظ" class="profile-img" />
+      <p>ذ. أسامة حفيظ</p>
+    </div>
+  </div>
+</section>
+
+
+    
+   
 
 </main>
 
-<footer>
-  <div class="container">
+<footer class="site-footer">
+  <div class="container footer-content">
+
+    <div class="footer-section">
+      <h4>روابط مهمة</h4>
+      <ul class="footer-links">
+        <li><a href="#">من نحن</a></li>
+        <li><a href="#">كلمة الرئيس</a></li>
+        <li><a href="#">الرئيس الشرفي</a></li>
+        <li><a href="#">المكتب التنفيذي</a></li>
+        <li><a href="#">اللجنة العلمية</a></li>
+        <li><a href="#">مهرجان ربيع الشعر</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h4>تابعنا</h4>
+      <div class="social-links">
+        <a href="https://facebook.com" target="_blank" aria-label="فيسبوك"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://instagram.com" target="_blank" aria-label="إنستغرام"><i class="fab fa-instagram"></i></a>
+        <a href="https://youtube.com" target="_blank" aria-label="يوتيوب"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+
+    <div class="footer-section">
+      <h4>اتصل بنا</h4>
+      <p>آسفي، المغرب</p>
+     <p dir="ltr">+212 6 00 00 00 00</p>
+<p dir="ltr">raaforum@gmail.com</p>
+
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
     <p>© 2025 منتدى رع للثقافة والإبداع بآسفي - جميع الحقوق محفوظة</p>
   </div>
 </footer>
+
+
 
 </body>
 </html>
