--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="#">من نحن</a></li>
-        <li><a href="#">كلمة الرئيس</a></li>
-        <li><a href="#">الرئيس الشرفي</a></li>
-        <li><a href="#">المكتب التنفيذي</a></li>
-        <li><a href="#">اللجنة العلمية والاستشارية</a></li>
-        <li><a href="#">مهرجان ربيع الشعر</a></li>
+        <li><a href="#about">من نحن</a></li>
+        <li><a href="#president-message">كلمة الرئيس</a></li>
+        <li><a href="#honorary-president">الرئيس الشرفي</a></li>
+        <li><a href="#executive-office">المكتب التنفيذي</a></li>
+        <li><a href="#scientific-committee">اللجنة العلمية والاستشارية</a></li>
+        <li><a href="#spring-festival">مهرجان ربيع الشعر</a></li>
       </ul>
     </nav>
   
@@ -43,7 +43,7 @@
 
   <!-- Section: من نحن -->
 
-  <section class="literary-section">
+  <section id="about" class="literary-section">
   <h2>من نحن</h2>
   <p>
     تأسس منتدى رع للثقافة والإبداع بآسفي سنة 2022، إيمانًا راسخًا بأن الأدب والثقافة يشكلان جسرًا متينًا للتواصل بين الشعوب، وتعزيزًا لقيم التفاهم وقبول الآخر. ومنذ انطلاقه، ظل المنتدى وفيًّا لجوهر رسالته؛ نشر الأعمال الجليلة ودعم الإبداع في مختلف تجلياته.
@@ -70,7 +70,7 @@
 
 
   <!-- Section: كلمة الرئيس -->
-  <section class="literary-section">
+  <section id="president-message" class="literary-section">
     <h2>كلمة الرئيس</h2>
     <div class="president-text">
       <p>
@@ -92,21 +92,38 @@
   </section>
 
   <!-- Section: الرئيس الشرفي -->
-  <section class="honorary container">
+  <section id="honorary-president" class="honorary container">
     <h2>الرئيس الشرفي</h2>
     <div class="honorary-content">
-      <img src="img/mohammed_zi.png" alt="صورة الرئيس الشرفي" class="honorary-img" />
+      <img src="img/saidelaouadi.png" alt="صورة الرئيس الشرفي" class="honorary-img" />
       <div class="bio">
         <p>
           سيرته، وصور جائزته العالمية "جائزة الشيخ زايد للكتاب في دورتها التاسعة عشرة في فرع “الفنون والدراسات النقدية”، عن كتابه: “الطعام والكلام: حفريات بلاغية ثقافية في التراث العربي”، الصادر عن دار افريقيا الشرق، الدار البيضاء، المغرب، سنة 2023م.
         </p>
       </div>
+  
+<div class="honorary-gallery">
+  <div class="gallery-item">
+   <img src="img/ج 3.jpg" alt="غلاف الكتاب" />
+    <p>غلاف الكتاب الفائز</p>
+  </div>
+  <div class="gallery-item">
+  <img src="img/ج 5.jpg" alt="الجائزة" />
+    <p>جائزة الشيخ زايد</p>
+  </div>
+  <div class="gallery-item">
+  <img src="img/تتويج الشيخ زايد.jpg" alt="صورة من الحفل" />
+    <p>لحظة التتويج</p>
+  </div>
+</div>
+
     </div>
   </section>
 
+
   <!-- Section: اللجان -->
- 
-    <section class="team-section container">
+
+    <section id="executive-office" class="team-section container">
   <h2>المكتب التنفيذي</h2>
   <div class="cards-grid">
     <div class="card">
@@ -116,9 +133,9 @@
       <a href="#">↗ السيرة الذاتية</a>
     </div>
     <div class="card">
-      <img src="img/ho" alt="خديجة العباسي" class="profile-img" />
+      <img src="img/houda_lkhsali.png" alt="خديجة العباسي" class="profile-img" />
       <h3>النائبة</h3>
-      <p>لال خديجة العباسي</p>
+      <p> خديجة العباسي</p>
       <a href="#">↗ السيرة الذاتية</a>
     </div>
     <div class="card">
@@ -156,7 +173,7 @@
 </section>
 
 
-    <section class="team-section container">
+    <section id="scientific-committee" class="team-section container">
   <h2>اللجنة العلمية والاستشارية</h2>
   <div class="cards-grid">
     <div class="card">
@@ -188,7 +205,7 @@
 
 <!-- Section: مهرجان ربيع الشعر -->
 
-<section class="team-section container">
+<section id="spring-festival" class="team-section container">
   <h2>لجنة قيادة مشروع مهرجان آسفي الدولي ربيع الشعر</h2>
   <div class="cards-grid-1">
     <div class="card-1">
@@ -275,7 +292,7 @@
     <div class="footer-section">
       <h4>اتصل بنا</h4>
       <p>آسفي، المغرب</p>
-     <p dir="ltr">+212 6 00 00 00 00</p>
+     <p dir="ltr">+212 6 17 82 68 82</p>
 <p dir="ltr">raaforum@gmail.com</p>
 
     </div>
