--- a/index.html
+++ b/index.html
@@ -123,85 +123,98 @@
 
   <!-- Section: اللجان -->
 
-    <section id="executive-office" class="team-section container">
+   <section id="executive-office" class="team-section container">
   <h2>المكتب التنفيذي</h2>
   <div class="cards-grid">
+
     <div class="card">
       <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
       <h3>الرئيس</h3>
       <p>ذ. محمد زين</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/mohamed_zine.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/houda_lkhsali.png" alt="خديجة العباسي" class="profile-img" />
       <h3>النائبة</h3>
-      <p> خديجة العباسي</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <p>خديجة العباسي</p>
+      <a href="cv/khadija_elabbassi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/youssef_abidat.png" alt="يوسف عابدات" class="profile-img" />
       <h3>أمين المال</h3>
       <p>يوسف عابدات</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/youssef_abidat.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/نائب_أمين_المال_عبد_الغني_النغايوي-removebg-preview.png" alt="عبد الغني النغايوي" class="profile-img" />
       <h3>نائب أمين المال</h3>
       <p>عبد الغني النغايوي</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/abdelghani_nghayawi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
-  <div class="card">
-        <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
-        <h3>الكاتب العام</h3>
-        <p>عزيز عدادي</p>
-        <a href="#">↗ السيرة الذاتية</a>
-        </div>
+
+    <div class="card">
+      <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
+      <h3>الكاتب العام</h3>
+      <p>عزيز عدادي</p>
+      <a href="cv/aziz_adadi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
+    </div>
+
     <div class="card">
       <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
       <h3>نائبة الكاتب العام</h3>
       <p>هدى الخصالي</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/houda_elkhesali.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
       <h3>مستشارة</h3>
       <p>مليكة ضريبين</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/malika_daribin.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
   </div>
-  
 </section>
 
 
     <section id="scientific-committee" class="team-section container">
   <h2>اللجنة العلمية والاستشارية</h2>
   <div class="cards-grid">
+
     <div class="card">
       <img src="img/الدكتور أحمد قادم.jpg" alt="أحمد قادم" class="profile-img" />
       <h3>الدكتور</h3>
       <p>أحمد قادم</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/ahmed_kadem.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/saidelaouadi.png" alt="سعيد العوادي" class="profile-img" />
       <h3>الدكتور</h3>
       <p>سعيد العوادي</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/saeed_elaouadi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/abdrza9...png" alt="عبد الرزاق المصباحي" class="profile-img" />
       <h3>الدكتور</h3>
       <p>عبد الرزاق المصباحي</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/abderrazak_mesbahi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
     <div class="card">
       <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
       <h3>الدكتور</h3>
       <p>محمد المودن</p>
-      <a href="#">↗ السيرة الذاتية</a>
+      <a href="cv/mohamed_mouden.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
+
   </div>
 </section>
+
 
 <!-- Section: مهرجان ربيع الشعر -->
 
