--- a/index.html
+++ b/index.html
@@ -39,7 +39,28 @@
   </div>
 </header>
 
+
 <main>
+    <!-- Section: hero-slider -->
+
+<section id="hero-slider" class="hero-slider">
+  <div class="slider-overlay"></div>
+
+  <div class="logo-corner">
+    <img src="img/logo raa-1.png" alt="Logo" />
+  </div>
+
+  <div class="slider">
+    <img src="img/تتويج الشيخ زايد.jpg" class="slide active" alt="صورة الحدث 1" />
+    <img src="img/من صور الشيخ زايد.jpg" class="slide" alt="صورة الحدث 2" />
+    <img src="img/ص س ع 1.jpg" class="slide" alt="صورة الحدث 3" />
+    <img src="img/ج 5.jpg" class="slide" alt="صورة الحدث 4" />
+        <img src="img/الشيخ زايد 3.jpg" class="slide" alt="صورة الحدث 3" />
+
+
+
+  </div>
+</section>
 
   <!-- Section: من نحن -->
 
@@ -131,56 +152,49 @@
       <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
       <h3>الرئيس</h3>
       <p>ذ. محمد زين</p>
-      <a href="cv/mohamed_zine.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
     <div class="card">
       <img src="img/houda_lkhsali.png" alt="خديجة العباسي" class="profile-img" />
       <h3>النائبة</h3>
       <p>خديجة العباسي</p>
-      <a href="cv/khadija_elabbassi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
     <div class="card">
       <img src="img/youssef_abidat.png" alt="يوسف عابدات" class="profile-img" />
       <h3>أمين المال</h3>
       <p>يوسف عابدات</p>
-      <a href="cv/youssef_abidat.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
     <div class="card">
       <img src="img/نائب_أمين_المال_عبد_الغني_النغايوي-removebg-preview.png" alt="عبد الغني النغايوي" class="profile-img" />
       <h3>نائب أمين المال</h3>
       <p>عبد الغني النغايوي</p>
-      <a href="cv/abdelghani_nghayawi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
     <div class="card">
       <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
       <h3>الكاتب العام</h3>
       <p>عزيز عدادي</p>
-      <a href="cv/aziz_adadi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
     <div class="card">
       <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
       <h3>نائبة الكاتب العام</h3>
       <p>هدى الخصالي</p>
-      <a href="cv/houda_elkhesali.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
     <div class="card">
       <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
       <h3>مستشارة</h3>
       <p>مليكة ضريبين</p>
-      <a href="cv/malika_daribin.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
     </div>
 
   </div>
 </section>
 
 
-    <section id="scientific-committee" class="team-section container">
+   <section id="scientific-committee" class="team-section container">
   <h2>اللجنة العلمية والاستشارية</h2>
   <div class="cards-grid">
 
@@ -188,90 +202,114 @@
       <img src="img/الدكتور أحمد قادم.jpg" alt="أحمد قادم" class="profile-img" />
       <h3>الدكتور</h3>
       <p>أحمد قادم</p>
-      <a href="cv/ahmed_kadem.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
+      <a href="cv/بيان لسيرة الدكتور أحمد قادم.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card">
       <img src="img/saidelaouadi.png" alt="سعيد العوادي" class="profile-img" />
       <h3>الدكتور</h3>
       <p>سعيد العوادي</p>
-      <a href="cv/saeed_elaouadi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
+      <a href="cv/سيرة الأكاديمي فضيلة الدكتور سعيد العوادي.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card">
-      <img src="img/abdrza9...png" alt="عبد الرزاق المصباحي" class="profile-img" />
+      <img src="img/abdrza9...png" alt="عبد المصباحي" class="profile-img" />
       <h3>الدكتور</h3>
       <p>عبد الرزاق المصباحي</p>
-      <a href="cv/abderrazak_mesbahi.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
+      <a href="cv/سيرة مختصرة عن الدكتور عبد الرواق المصباحي.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
     <div class="card">
       <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
       <h3>الدكتور</h3>
       <p>محمد المودن</p>
-      <a href="cv/mohamed_mouden.pdf" target="_blank" class="cv-button">↗ السيرة الذاتية</a>
+      <a href="cv/مختصر السيرة العلمية محمد المودن.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
 
   </div>
 </section>
+
 
 
 <!-- Section: مهرجان ربيع الشعر -->
-
 <section id="spring-festival" class="team-section container">
   <h2>لجنة قيادة مشروع مهرجان آسفي الدولي ربيع الشعر</h2>
   <div class="cards-grid-1">
+
     <div class="card-1">
       <img src="img/الرئيس_محمد_زين-removebg-preview.png" alt="محمد زين" class="profile-img" />
       <p>ذ. محمد زين</p>
+      <a href="cv/السيرة العلمية محمد زين.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
       <img src="img/aziz_adadi.png" alt="عزيز عدادي" class="profile-img" />
       <p>ذ. عزيز عدادي</p>
+      <a href="cv/سيرة علمية للأستاذ عزيز عدادي.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
       <img src="img/malikadaribin.png" alt="مليكة ضريبين" class="profile-img" />
       <p>ذة. مليكة ضريبين</p>
+      <a href="cv/mlcv.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
       <img src="img/ذة. هدى الخصالي.jpg" alt="هدى الخصالي" class="profile-img" />
       <p>ذة. هدى الخصالي</p>
+      <a href="cv/سيرة مختصرة ذة. هدى الخصالي.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
       <img src="img/ذة. زكية المرموق" alt="زكية المرموق" class="profile-img" />
       <p>ذة. زكية المرموق</p>
+      <a href="cv/سيرة مختصرة للشاعرة زكية المرموق.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
-      <img src="img/" alt="محمد العربي غجو" class="profile-img" />
+      <img src="img/image-removebg-preview.png" alt="محمد العربي غجو" class="profile-img" />
       <p>ذ. محمد العربي غجو</p>
+      <a href="cv/سيرة إبداعية العربي غجو.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
       <img src="img/mwdenmoha.png" alt="محمد المودن" class="profile-img" />
       <p>د. محمد المودن</p>
+      <a href="cv/مختصر السيرة العلمية محمد المودن.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
+
     <div class="card-1">
-      <img src="img/" alt="عبد المجيد هضمي" class="profile-img" />
+      <img src="img/WhatsApp_Image_2025-07-30_at_16.55.13_ad39c312-removebg-preview.png" alt="عبد المجيد هضمي" class="profile-img" />
       <p>ذ. عبد المجيد هضمي</p>
+      <a href="cv/" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
-      <img src="img/m" alt="محمد منير" class="profile-img" />
+      <img src="img/محمد منير.jpg" alt="محمد منير" class="profile-img" />
       <p>ذ. محمد منير</p>
+      <a href="cv/med.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
     <div class="card-1">
       <img src="img/abdlhadirawdi.png" alt="عبد الهادي روضي" class="profile-img" />
       <p>د. عبد الهادي روضي</p>
+      <a href="cv/مختصر عن السيرة الإبداعية والنقدية عبد الهادي روضي.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
+
     <div class="card-1">
       <img src="img/dr_rachid.png" alt="رشيد الخديري" class="profile-img" />
       <p>د. رشيد الخديري</p>
+      <a href="cv/السيرة العلمية للدكتور رشيد الخديري.pdf" target="_blank" class="cv-button">↗ السيرة العلمية</a>
     </div>
+
     <div class="card-1">
       <img src="img/الباحث_أسامة_لحفيظ.png" alt="أسامة حفيظ" class="profile-img" />
       <p>ذ. أسامة حفيظ</p>
+      <a href="cv/السيرة العلمية للباحث أسامة لحفيظ.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+
   </div>
 </section>
-
 
     
    
@@ -284,12 +322,12 @@
     <div class="footer-section">
       <h4>روابط مهمة</h4>
       <ul class="footer-links">
-        <li><a href="#">من نحن</a></li>
-        <li><a href="#">كلمة الرئيس</a></li>
-        <li><a href="#">الرئيس الشرفي</a></li>
-        <li><a href="#">المكتب التنفيذي</a></li>
-        <li><a href="#">اللجنة العلمية</a></li>
-        <li><a href="#">مهرجان ربيع الشعر</a></li>
+        <li><a href="#about">من نحن</a></li>
+        <li><a href="#president-message">كلمة الرئيس</a></li>
+        <li><a href="#honorary-president">الرئيس الشرفي</a></li>
+        <li><a href="#executive-office">المكتب التنفيذي</a></li>
+        <li><a href="#scientific-committee">اللجنة العلمية</a></li>
+        <li><a href="#spring-festival">مهرجان ربيع الشعر</a></li>
       </ul>
     </div>
 
@@ -318,6 +356,20 @@
 </footer>
 
 
+<script>
+  let slideIndex = 0;
+  const slides = document.querySelectorAll(".slide");
+
+  function showSlides() {
+    slides.forEach((slide, i) => {
+      slide.classList.remove("active");
+    });
+    slideIndex = (slideIndex + 1) % slides.length;
+    slides[slideIndex].classList.add("active");
+  }
+
+  setInterval(showSlides, 4000); // Every 4 seconds
+</script>
 
 </body>
 </html>
