--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header>
-  <div class="navbar container">
+  <div class="navbar">
     <div class="site-branding">
       <a href="index.html" class="logo-link">
         <img src="img/logo raa-1.png" alt="شعار المنتدى" class="logo" />
@@ -23,6 +23,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="#about">من نحن</a></li>
+        <li><a href="#goals">أهداف المنتدى</a></li>
         <li><a href="#president-message">كلمة الرئيس</a></li>
         <li><a href="#honorary-president">الرئيس الشرفي</a></li>
         <li><a href="#executive-office">المكتب التنفيذي</a></li>
@@ -32,7 +33,7 @@
     </nav>
   
   <div class="nav-social-icons">
-    <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.facebook.com/share/1aSLw31hR6/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
     <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
     <a href="mailto:raaforum@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
   </div>
@@ -62,6 +63,8 @@
   </div>
 </section>
 
+
+
   <!-- Section: من نحن -->
 
   <section id="about" class="literary-section">
@@ -89,6 +92,30 @@
   </p>
 </section>
 
+<section id="goals" class="about goals">
+  <h2>أهداف المنتدى</h2>
+  <p>
+    يسعى منتدانا جاهدًا لتعزيز المشهد الثقافي المحلي والوطني والدولي عن طريق تحقيق الأهداف التالية:
+  </p>
+  <ul class="goals-list">
+    <li>المساهمة في تنظيم لقاءات ثقافية وندوات فكرية وورشات تكوينية من شأنها النهوض بالشأن الثقافي بالمدينة خاصة وربوع الوطن عامة.</li>
+    <li>مقاربة الإبداع والثقافة بجغرافيات متنوعة سواء بالمغرب أو الوطن العربي أو دوليًا.</li>
+    <li>تنظيم مهرجانات ومؤتمرات وأيام دراسية محلية ووطنية ودولية لتبادل التجارب والخبرات.</li>
+    <li>الاهتمام بالتاريخ والثقافة والموروث المحلي والوطني وذلك بعقد لقاءات ثقافية وعلمية أكاديمية.</li>
+    <li>الاهتمام بالناشئة وتحفيزها على الانخراط في مشروع القراءة والإبداع.</li>
+    <li>إنشاء وخلق مركز للبحث العلمي والدراسات الأدبية واللغوية.</li>
+  </ul>
+  <p>
+    ولبلوغ هذه الأهداف، يتوسل منتدانا تتبع الخطوات التالية:
+  </p>
+  <ul class="goals-list">
+    <li>تشجيع المبادرات الأدبية لكل الفئات العمرية عمومًا وللشباب على وجه الخصوص.</li>
+    <li>تفعيل نوادٍ شبابية بالمؤسسات التعليمية والمدارس العليا والجامعات المغربية.</li>
+    <li>وضع خطط عمل وهندسة ثقافية لمشهدنا الأدبي والنقدي المحلي والوطني والدولي.</li>
+    <li>ربط علاقات تعاون وشراكات مع مختلف فعاليات المجتمع المدني والمؤسسات والقطاعات الوصية بالمغرب.</li>
+    <li>طبع ونشر كتب ودواوين ومجلات، تساهم في الرقي بالفعل الإبداعي.</li>
+  </ul>
+</section>
 
   <!-- Section: كلمة الرئيس -->
   <section id="president-message" class="literary-section">
@@ -307,6 +334,22 @@
       <p>ذ. أسامة حفيظ</p>
       <a href="cv/السيرة العلمية للباحث أسامة لحفيظ.pdf" target="_blank" class="cv-button">↗ السيرة الإبداعية</a>
     </div>
+    </div> <!-- END of .cards-grid-1 -->
+
+<!-- New Section for Festival Presentation -->
+
+
+<div class="festival-presentation centered-pdf">
+  <h3>عرض تقديمي حول المهرجان</h3>
+  <p class="festival-description">
+    للمزيد من المعلومات حول مهرجان آسفي الدولي ربيع الشعر، يمكنكم تحميل العرض التعريفي الذي يتضمن نبذة عن رؤيته، أهدافه، محطاته السابقة، وضيوفه المكرمين.
+  </p>
+  <a href="cv/تقرير مفصل عن فعاليات الدورة الثالثة لمهرجان اسفي الدولي ربيع الشعر (3).pdf" target="_blank" class="cv-button presentation-button">
+    ↗ تحميل العرض التعريفي
+  </a>
+  
+</div>
+
 
   </div>
 </section>
@@ -323,6 +366,7 @@
       <h4>روابط مهمة</h4>
       <ul class="footer-links">
         <li><a href="#about">من نحن</a></li>
+        <li><a href="#goals">أهداف المنتدى</a></li>
         <li><a href="#president-message">كلمة الرئيس</a></li>
         <li><a href="#honorary-president">الرئيس الشرفي</a></li>
         <li><a href="#executive-office">المكتب التنفيذي</a></li>
@@ -333,18 +377,18 @@
 
     <div class="footer-section">
       <h4>تابعنا</h4>
-      <div class="social-links">
-        <a href="https://facebook.com" target="_blank" aria-label="فيسبوك"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://instagram.com" target="_blank" aria-label="إنستغرام"><i class="fab fa-instagram"></i></a>
-        <a href="https://youtube.com" target="_blank" aria-label="يوتيوب"><i class="fab fa-youtube"></i></a>
-      </div>
+       <div class="nav-social-icons">
+    <a href="https://www.facebook.com/share/1aSLw31hR6/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="mailto:raaforum@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+  </div>
     </div>
 
     <div class="footer-section">
       <h4>اتصل بنا</h4>
       <p>آسفي، المغرب</p>
      <p dir="ltr">+212 6 17 82 68 82</p>
-<p dir="ltr">raaforum@gmail.com</p>
+     <p dir="ltr">raaforum@gmail.com</p>
 
     </div>
 
