--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>منتدى رع للثقافة والإبداع بآسفي</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="img/logo raa-1.png" type="image/x-icon" />
